--- a/index.html
+++ b/index.html
@@ -185,6 +185,102 @@
                 font-size: 2rem;
             }
         }
+        .newsletter-section {
+            background: white;
+            border-radius: 12px;
+            padding: 2rem;
+            margin: 2rem 0;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .newsletter-title {
+            font-size: 1.5rem;
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        .newsletter-description {
+            color: var(--secondary-color);
+            margin-bottom: 2rem;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .newsletter-form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            text-align: left;
+        }
+
+        .form-group label {
+            font-size: 0.9rem;
+            color: var(--secondary-color);
+        }
+
+        .form-group input {
+            padding: 0.8rem;
+            border: 1px solid #e5e5e5;
+            border-radius: 6px;
+            font-size: 1rem;
+            transition: border-color 0.2s;
+        }
+
+        .form-group input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
+
+        .subscribe-button {
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 0.8rem 2rem;
+            border-radius: 6px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+        .subscribe-button:hover {
+            background-color: #0c8b6c;
+        }
+
+        .subscribe-button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        .form-message {
+            margin-top: 1rem;
+            padding: 0.8rem;
+            border-radius: 6px;
+            display: none;
+        }
+
+        .form-message.success {
+            display: block;
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+
+        .form-message.error {
+            display: block;
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }        
     </style>
 </head>
 <body>
@@ -241,6 +337,23 @@
                 </div>
             </div>
         </section>
+        <section class="newsletter-section">
+            <h2 class="newsletter-title">Stay Updated</h2>
+            <p class="newsletter-description">Subscribe to receive the latest updates and announcements from OpenAI's 12 Days event directly in your inbox.</p>
+            <form id="newsletterForm" class="newsletter-form">
+                <div class="form-group">
+                    <label for="email">Email Address*</label>
+                    <input type="email" id="email" name="email" required placeholder="your@email.com">
+                </div>
+                <div class="form-group">
+                    <label for="name">Name (Optional)</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name">
+                </div>
+                <button type="submit" class="subscribe-button">Subscribe</button>
+                <div id="formMessage" class="form-message"></div>
+            </form>
+        </section>
+        
 
         <footer>
             <p>Not affiliated with OpenAI. This is a community project tracking the 12 Days event.</p>
@@ -315,6 +428,48 @@
         // Update countdown every second
         setInterval(updateCountdown, 1000);
         updateCountdown(); // Initial call
+
+        document.getElementById('newsletterForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            const form = e.target;
+            const submitButton = form.querySelector('button[type="submit"]');
+            const messageDiv = document.getElementById('formMessage');
+
+            // Disable submit button and clear previous messages
+            submitButton.disabled = true;
+            messageDiv.className = 'form-message';
+            messageDiv.textContent = '';
+
+            try {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbz5tLMTz6y6SDnyi-O76yioEX3ZnQ6OZt-yq5sKw_ISy9Fv_PPZ8srmsZuX0I4xGSLbPw/exec', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        email: form.email.value,
+                        name: form.name.value
+                    })
+                });
+
+                const data = await response.json();
+
+                if (data.status === 'success') {
+                    messageDiv.className = 'form-message success';
+                    messageDiv.textContent = 'Thanks for subscribing! You will receive our updates soon.';
+                    form.reset();
+                } else {
+                    messageDiv.className = 'form-message error';
+                    messageDiv.textContent = data.message || 'Something went wrong. Please try again.';
+                }
+            } catch (error) {
+                messageDiv.className = 'form-message error';
+                messageDiv.textContent = 'Network error. Please try again later.';
+            }
+
+            submitButton.disabled = false;
+        });
     </script>
 </body>
 </html>
