--- a/index.html
+++ b/index.html
@@ -442,8 +442,10 @@
             messageDiv.textContent = '';
 
             try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbz5tLMTz6y6SDnyi-O76yioEX3ZnQ6OZt-yq5sKw_ISy9Fv_PPZ8srmsZuX0I4xGSLbPw/exec', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxV50bqMaFl1Rv5OF164nIvwzxmRnoZC0nETPvrfsTjLpp4HhMi_TLKaPsn0usgbOl9uQ/exec', {
                     method: 'POST',
+                    mode: 'cors',
+                    credentials: 'omit',
                     headers: {
                         'Content-Type': 'application/json',
                     },
