--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <section class="newsletter-section">
             <h2 class="newsletter-title">Stay Updated</h2>
             <p class="newsletter-description">Subscribe to receive the latest updates and announcements from OpenAI's 12 Days event directly in your inbox.</p>
-            <form id="newsletterForm" class="newsletter-form">
+            <!-- <form id="newsletterForm" class="newsletter-form">
                 <div class="form-group">
                     <label for="email">Email Address*</label>
                     <input type="email" id="email" name="email" required placeholder="your@email.com">
@@ -511,7 +511,18 @@
                 </div>
                 <button type="submit" class="subscribe-button">Subscribe</button>
                 <div id="formMessage" class="form-message"></div>
-            </form>
+            </form> -->
+            <form id="newsletterForm" class="newsletter-form" method="POST" action="https://script.google.com/macros/s/AKfycbz6VvT3_KJNizZQv4Lp0YovOW304cfrjeBTRcs4P2Lplpe4SlnWqkKlasQhd3yGXEE4oA/exec">
+                <div class="form-group">
+                    <input type="email" id="email" name="Email" type="email" placeholder="your@email.com" required>
+                </div>
+                <div class="form-group">                                  
+                    <input type="text" id="name" name="Name" type="text" placeholder="Your Name" required>
+                </div>                    
+                <button type="submit" class="subscribe-button">Subscribe</button>
+                <div id="formMessage" class="form-message"></div>
+              </form>
+
         </section>
         
 
@@ -567,7 +578,7 @@
                }
            }
         });       
-        document.getElementById('newsletterForm').addEventListener('submit', async function(e) {
+        <!-- document.getElementById('newsletterForm').addEventListener('submit', async function(e) {
             e.preventDefault();
 
             const form = e.target;
@@ -628,7 +639,7 @@
             } finally {
                 submitButton.disabled = false;
             }
-        });
+        }); -->
     </script>
 </body>
 </html>
