--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
         <div class="days-nav">
             <button class="day-button active" data-day="1">Day 1</button>
             <button class="day-button active" data-day="2">Day 2</button>
-            <button class="day-button active" data-day="3">Day 3</button>
-            <button class="day-button active" data-day="4">Day 4</button>
-            <button class="day-button active" data-day="5">Day 5</button>
-            <button class="day-button active" data-day="6">Day 6</button>
-            <button class="day-button active" data-day="7">Day 7</button>
-            <button class="day-button active" data-day="8">Day 8</button>
-            <button class="day-button active" data-day="9">Day 9</button>
-            <button class="day-button active" data-day="10">Day 10</button>
-            <button class="day-button active" data-day="11">Day 11</button>
-            <button class="day-button active" data-day="12">Day 12</button>
+            <button class="day-button upcoming" data-day="3">Day 3</button>
+            <button class="day-button upcoming" data-day="4">Day 4</button>
+            <button class="day-button upcoming" data-day="5">Day 5</button>
+            <button class="day-button upcoming" data-day="6">Day 6</button>
+            <button class="day-button upcoming" data-day="7">Day 7</button>
+            <button class="day-button upcoming" data-day="8">Day 8</button>
+            <button class="day-button upcoming" data-day="9">Day 9</button>
+            <button class="day-button upcoming" data-day="10">Day 10</button>
+            <button class="day-button upcoming" data-day="11">Day 11</button>
+            <button class="day-button upcoming" data-day="12">Day 12</button>
         </div>        
 
         <div id="day1" class="day-content active">
