--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Track OpenAI's 12 Days of Announcements - Live updates and countdown">
-    <title>12 Days of OpenAI</title>
+    <meta name="description" content="Track OpenAI's 12 Days of Announcements - Comprehensive coverage of OpenAI's December 2024 event featuring O1 model, Sora, Canvas, Apple integration, and more. Live updates and analysis.">
+    <meta name="keywords" content="OpenAI, ChatGPT, O1 Model, Sora, Canvas, Apple Integration, AI Announcements, OpenAI Updates">
+    <meta name="author" content="Your Name">
+    <meta name="robots" content="index, follow">
+    <title>12 Days of OpenAI 2024 - Complete Coverage & Live Updates</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
