--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <meta name="author" content="Your Name">
     <meta name="robots" content="index, follow">
     <title>12 Days of OpenAI 2024 - Complete Coverage & Live Updates</title>
+    <!-- Add Schema Markup here -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Event",
+          "name": "12 Days of OpenAI",
+          "description": "OpenAI's special announcements and features during their 12 Days event",
+          "startDate": "2024-12-05",
+          "endDate": "2024-12-16",
+          "organizer": {
+            "@type": "Organization",
+            "name": "OpenAI"
+          },
+          "location": {
+            "@type": "VirtualLocation",
+            "url": "https://12daysofopenai.com"
+          }
+        }
+    </script>    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
