--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <button class="day-button active" data-day="4">Day 4</button>
             <button class="day-button active" data-day="5">Day 5</button>
             <button class="day-button active" data-day="6">Day 6</button>
-            <button class="day-button upcoming" data-day="7">Day 7</button>
+            <button class="day-button active" data-day="7">Day 7</button>
             <button class="day-button upcoming" data-day="8">Day 8</button>
             <button class="day-button upcoming" data-day="9">Day 9</button>
             <button class="day-button upcoming" data-day="10">Day 10</button>
@@ -904,7 +904,7 @@
                 
             </section>
         </div>
-        <div id="day7" class="day-content upcoming-content">
+        <div id="day7" class="day-content active">
             <section class="resources-section" style="background: white; border-radius: 12px; padding: 2rem; margin: 2rem 0; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <h2 class="resources-title" style="font-size: 1.5rem; color: var(--primary-color); margin-bottom: 1.5rem;">Day 7 Resources</h2>
                 <a href="https://pse.is/6txzgr" style="color: var(--primary-color); text-decoration: none; padding: 1rem; background: #f0f7f4; border-radius: 8px; display: flex; flex-direction: column;">
