feat: update seo performance

--- a/index.html
+++ b/index.html
@@ -3,27 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Track OpenAI's 12 Days of Announcements - Comprehensive coverage of OpenAI's December 2024 event featuring O1 model, Sora, Canvas, Apple integration, and more. Live updates and analysis.">
-    <meta name="keywords" content="OpenAI, ChatGPT, O1 Model, Sora, Canvas, Apple Integration, AI Announcements, OpenAI Updates">
-    <meta name="author" content="Your Name">
+    <meta name="description" content="Complete coverage of OpenAI's 12 Days of Announcements (Dec 5-16, 2024) featuring O1 model, Sora video generation, Canvas development tools, Apple integration, and more. Get live updates, transcripts, and analysis of each day's announcements.">
+    <meta name="keywords" content="OpenAI announcements, O1 model, Sora video, Canvas tools, ChatGPT Pro, Apple integration, AI developments, OpenAI updates 2024">
+    <meta name="author" content="Weiren Lan">
+    <meta property="og:title" content="12 Days of OpenAI 2024 - Complete Coverage & Live Updates">
+    <meta property="og:description" content="Track OpenAI's December 2024 announcements featuring O1 model, Sora, Canvas, and more.">    
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="12 Days of OpenAI 2024">
+    <meta name="twitter:description" content="Complete coverage of OpenAI's December announcements">    
+    
     <meta name="robots" content="index, follow">
     <title>12 Days of OpenAI 2024 - Complete Coverage & Live Updates</title>
     <!-- Add Schema Markup here -->
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
-          "@type": "Event",
-          "name": "12 Days of OpenAI",
-          "description": "OpenAI's special announcements and features during their 12 Days event",
-          "startDate": "2024-12-05",
-          "endDate": "2024-12-16",
-          "organizer": {
-            "@type": "Organization",
-            "name": "OpenAI"
-          },
-          "location": {
-            "@type": "VirtualLocation",
-            "url": "https://12daysofopenai.com"
+          "@type": "WebPage",
+          "mainEntity": {
+            "@type": "Event",
+            "name": "12 Days of OpenAI",
+            "description": "OpenAI's special announcements and features during their 12 Days event",
+            "startDate": "2024-12-05",
+            "endDate": "2024-12-16",
+            "organizer": {
+              "@type": "Organization",
+              "name": "OpenAI",
+              "url": "https://openai.com"
+            },
+            "location": {
+              "@type": "VirtualLocation",
+              "url": "https://12daysofopenai.com"
+            },
+            "offers": {
+              "@type": "Offer",
+              "price": "0",
+              "priceCurrency": "USD"
+            },
+            "superEvent": {
+              "@type": "BusinessEvent",
+              "name": "OpenAI Product Announcements 2024"
+            }
           }
         }
     </script>
